// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminDeleteRegistration can delete a registration as an admin user 1`] = `
Object {
  "data": Object {
    "adminDeleteRegistration": Object {
      "success": true,
    },
  },
}
`;

exports[`AdminDeleteRegistration can't delete registration if user is not an admin 1`] = `
Object {
  "data": Object {
    "adminDeleteRegistration": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "DNIED",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.admin_delete_registration(uuid) line 7 at RAISE",
        },
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Acces denied. Only admins are allowed to use this mutation.",
      "path": Array [
        "adminDeleteRegistration",
      ],
    },
  ],
}
`;

exports[`AdminDeleteRegistration returns an error if registration is not found 1`] = `
Object {
  "data": Object {
    "adminDeleteRegistration": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "NTFND",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.admin_delete_registration(uuid) line 14 at RAISE",
        },
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Registration was not found.",
      "path": Array [
        "adminDeleteRegistration",
      ],
    },
  ],
}
`;
